--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@
 - implement decay system
 - change relative paths to Path(__file__).parent
 - switch user database from JSON to CSV
+- gitignore decay_meta
